WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53568
Fix pink video bug with gpu-acceleration enabled
https://bugs.webkit.org/show_bug.cgi?id=53568
Summary
Fix pink video bug with gpu-acceleration enabled
Victoria Kirst
Reported
2011-02-01 19:54:51 PST
Fix pink video bug with gpu-acceleration enabled
Attachments
Patch
(6.22 KB, patch)
2011-02-01 19:56 PST
,
Victoria Kirst
no flags
Details
Formatted Diff
Diff
Patch
(6.77 KB, patch)
2011-02-03 12:47 PST
,
Victoria Kirst
no flags
Details
Formatted Diff
Diff
Patch
(6.24 KB, patch)
2011-02-03 12:53 PST
,
Victoria Kirst
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Victoria Kirst
Comment 1
2011-02-01 19:56:34 PST
Created
attachment 80876
[details]
Patch
Kenneth Russell
Comment 2
2011-02-03 11:16:14 PST
Comment on
attachment 80876
[details]
Patch We really should figure out a more general solution to this problem. Can we switch the locale of the GPU process to something neutral? This workaround seems OK to me, but it's going to be fragile.
Victoria Kirst
Comment 3
2011-02-03 11:48:56 PST
Thanks Ken! I agree, this is a weak solution. Evan Martin recently uploaded a patch to force LC_NUMERIC to C for all non-browser processes, which should also theoretically fix this. (
http://codereview.chromium.org/6347045
) But since that patch is a bit scary and should have some baking time before we commit to it, we thought it'd be best to upload this in interim to merge into m10.
James Robinson
Comment 4
2011-02-03 12:41:07 PST
Comment on
attachment 80876
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=80876&action=review
> Source/WebCore/platform/graphics/chromium/VideoLayerChromium.cpp:108 > + " gl_FragColor = vec4(rgb, float(1) * alpha; \n"
these parens are mismatched (pointed out by someone on the crbug)
Victoria Kirst
Comment 5
2011-02-03 12:47:42 PST
Created
attachment 81101
[details]
Patch
Victoria Kirst
Comment 6
2011-02-03 12:48:45 PST
Comment on
attachment 81101
[details]
Patch Oops, argh, screwed up change log...
Victoria Kirst
Comment 7
2011-02-03 12:53:12 PST
Created
attachment 81102
[details]
Patch
Victoria Kirst
Comment 8
2011-02-03 12:56:04 PST
> these parens are mismatched (pointed out by someone on the crbug)
Yikes, thanks for the catch, jamesr/crbug guy!!
Vangelis Kokkevis
Comment 9
2011-02-03 14:08:40 PST
out of curiosity, would replacing 0.5 with (float)1/2 work? It would touch less code...
WebKit Commit Bot
Comment 10
2011-02-03 22:46:59 PST
Comment on
attachment 81102
[details]
Patch Clearing flags on attachment: 81102 Committed
r77608
: <
http://trac.webkit.org/changeset/77608
>
WebKit Commit Bot
Comment 11
2011-02-03 22:47:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug