2011-02-03  Victoria Kirst  <vrk@google.com>

Reviewed by James Robinson.

        Replaces float literals with uniform values in shader code
        so that buggy drivers unable to parse float values in different
        locales will not produce a pink video.

        [chromium] Fix pink video bug with gpu-acceleration enabled
        https://bugs.webkit.org/show_bug.cgi?id=53568

        * platform/graphics/chromium/VideoLayerChromium.cpp:
        (WebCore::VideoLayerChromium::SharedValues::SharedValues):
        (WebCore::VideoLayerChromium::drawYUV):
        * platform/graphics/chromium/VideoLayerChromium.h:
        (WebCore::VideoLayerChromium::SharedValues::signAdjLocation):

Canonical link: https://commits.webkit.org/67680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77608 268f45cc-cd09-0410-ab3c-d52691b4dbfc